# concourse-ntfy-resource

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
