[package]
name = "concourse-ntfy-resource"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["cookies", "gzip", "json", "multipart", "stream", "blocking", "json", "rustls-tls"] }
url = "2.5.4"
chrono = "0.4.41"
serde_with = "3.14.0"
